--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -108,7 +108,7 @@
   }
 
 @layer base {
-  :root, #spark-app {
+  :root {
     --tomato-contrast: #fff;
     --red-contrast: #fff;
     --ruby-contrast: #fff;
@@ -275,7 +275,7 @@
     --font-family: var(--font-sans-serif);
   }
 
-  :root.dark-theme, #spark-app.dark-theme {
+  :root.dark-theme {
     --color-bg: var(--color-neutral-1);
     --color-bg-inset: #000000;
     --color-bg-overlay: var(--color-neutral-3);
